[package]
name = "omnecache"
version = "0.1.0"
edition = "2024"

[dependencies]
const-default = { version = "1.0.0", features = ["derive"] }
dirs-next = "2.0.0"
fs2 = "0.4.3"
lru = "0.14.0"
nix = { version = "0.30.1", features = ["fs", "resource"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.22"
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["full"] }
