[package]
name = "omnecache"
version = "0.1.0"
edition = "2021"

[dependencies]
const-default = { version = "1.0.0", features = ["derive"] }
dirs-next = "2.0.0"
fs2 = "0.4.3"
lru = "0.12.5"
nix = { version = "0.29.0", features = ["fs", "resource"] }
rand = "0.9.0"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.44.0", features = ["full"] }
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["full"] }
